fix overflow issue on desktop

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,6 @@
 @layer base {
   body {
     min-height: 100vh;
-    position: relative;
   }
 }
 
